# BoltPages

./: .gitignore  AGENTS.md  config.toml  mermaid.config.json  pyproject.toml  readme.md
.github/workflows/: deploy.yaml
pages/about/: index.md
posts/2025-08/markdown-showcase/: index.md
posts/2026-02/blog-compiler-tricks/: index.md
src/blog/: __init__.py  __main__.py  assets.py  builder.py  cache.py  cli.py  config.py  devserver.py  models.py  utils.py
src/blog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/blog/builders/: __init__.py  archive.py  errors.py  index.py  posts.py  tags.py
src/blog/renderer/: __init__.py  markdown.py  mermaid.py  typst.py
static/: hero-particles.js  script.js  style.css
templates/: 404.html  _article_list_items.html  archive.html  base.html  index.html  post.html  tag.html  tags.html
